# Boids

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Boids.hpp  define.hpp  utils.hpp
include/Interface/: IDisplay.hpp
include/class/: IBoid.hpp
include/class/abstract/: ABoid.cpp  ABoid.hpp
include/class/interface/: IBoid.hpp
include/classe/: Boids.hpp  Json.hpp
include/struct/: position.h
src/: main.cpp
src/Boid/: Boid.cpp  Boid.hpp
src/Menu/: Menu.cpp  Menu.hpp
src/Playground/: Playground.cpp  Playground.hpp
src/Simulation/: Simulation.cpp  Simulation.hpp
src/abstract/: ABoid.cpp  ABoid.hpp
src/components/Button/: Button.cpp  Button.hpp
src/factory/: Factory.cpp  Factory.hpp
src/main/: main.cpp
src/playground/: Playground.cpp  Playground.hpp
src/utils/: error_handling.cpp  help.cpp
